style: remove scroll animations in Mengapa and fix mobile text switcher alignment

--- a/src/components/section_components/mainpage/style/init.css
+++ b/src/components/section_components/mainpage/style/init.css
@@ -521,6 +521,12 @@
     top: -5px;
 }
 
+@media (max-width: 768px) {
+    .text-switcher-container {
+        top: 0px;
+    }
+}
+
 .text-switcher-item {
     color: #B8945F;
     text-align: center;
